--- a/index.html
+++ b/index.html
@@ -3,27 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>GSAP, Scrollmagic and Bulma</title>
-    <link type="text/css" href="css/bulma.min.css" rel="stylesheet">
-    <link type="text/css" href="css/main.css" rel="stylesheet">
+    <!--<link type="text/css" href="css/bulma.min.css" rel="stylesheet">-->
+    <!--<link type="text/css" href="css/main.css" rel="stylesheet">-->
+    <link type="text/css" href="css/main-demo.css" rel="stylesheet">
 </head>
 <body>
-    <div id="nightsky">
-        <div id="meteor-container">
-            <canvas id="canvas_one">
+<div id="meteor-container">
 
-            </canvas>
-        </div>
-    </div>
-    <div id="demo" class="columns">
-        <div class="box green column" id="greenBox">0</div>
-        <div class="box red column" id="redBox">0</div>
-        <div class="box blue column" id="blueBox">0</div>
-        <div class="box yellow column" id="yellowBox">0</div>
-    </div>
-
+</div>
 </body>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-<script src="js/plugins/animation.gsap.js"></script>
-<script src="js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
+<!--<script src="js/plugins/animation.gsap.js"></script>-->
+<!--<script src="js/main.js"></script>-->
+<script src="js/main-demo.js"></script>
 </html>
