--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
 </head>
 <body>
-    <div id="sketch-holder">
+    <div class="main-container">
+       <div class="starry-sky">
+            <div id="sketch-holder">
 
-    </div>
-    <div id="word">
-        <h1> Testing </h1>
+            </div>
+            <!-- words -->
+            <div class="greeting-container">
+                <h1 id="firstpart-greeting">
+                    Hello World
+                </h1>
+            </div>
+       </div>
     </div>
 </body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
-<!--<script src="js/plugins/animation.gsap.js"></script>-->
+<script src="js/plugins/animation.gsap.js"></script>
 <!--<script src="js/main.js"></script>-->
 <script src="js/main-demo.js"></script>
 </html>
