final commit wed aug 8 before sleeping

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
             <div id="sketch-holder">
 
             </div>
-            <!-- words -->
-            <div class="greeting-container">
-                <h1 id="firstpart-greeting">
-                    Hello World
-                </h1>
-            </div>
+       </div>
+       <div class="greeting-container">
+           <h1 id="firstpart-greeting">
+            Test
+           </h1>
        </div>
     </div>
 </body>
