start of slideshow

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GSAP, Scrollmagic and Bulma</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!--<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Satisfy" rel="stylesheet">
     <link type="text/css" href="css/bulma.min.css" rel="stylesheet">
     <!--<link type="text/css" href="css/main.css" rel="stylesheet">-->
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
@@ -15,7 +17,7 @@
            <i class="fas fa-angle-down scrolldown-i"></i>
        </div>
         <div class="greeting first-part" id="firstPartDiv">
-            <div class="text-container">
+            <div id="firstpart-text-container">
 
             </div>
         </div>
