--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="main-container">
        <div class="space-div">
-           <i class="fas fa-angle-down scrolldown-i"></i>
+           <!--<i class="fas fa-angle-down scrolldown-i"></i>-->
+           <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" id="scrollIndicator"></a>
        </div>
         <div class="greeting first-part" id="firstPartDiv">
             <div id="firstpart-text-container">
