created div for future changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
             </div>
         </div>
+        <div class="greeting second-part" id="secondPartDiv">
+            <div id="secondpart-text-container">
+
+            </div>
+        </div>
+        <div class="greeting third-part" id="thirdPartDiv">
+            <div id="thirdpart-text-container">
+
+            </div>
+        </div>
         <div class="starry-sky">
             <div id="sketch-holder">
             </div>
