--- a/index.html
+++ b/index.html
@@ -32,13 +32,18 @@
 
             </div>
         </div>
+        <div class="greeting fourth-part" id="fourthPartDiv">
+            <canvas id="gravitypoint-sketch-holder">
+
+            </canvas>
+        </div>
         <div class="starry-sky">
             <div id="sketch-holder">
             </div>
         </div>
     </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
@@ -46,6 +51,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/ScrollToPlugin.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 <!--<script src="js/main.js"></script>-->
-<script src="js/main-demo.js"></script>
+<!--<script src="js/main-demo.js"></script>-->
+<script src="js/gravitypoints.js"></script>
 
 </html>
