--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
 </head>
 <body>
+    
     <div class="main-container">
        <div class="space-div">
            <!--<i class="fas fa-angle-down scrolldown-i"></i>-->
@@ -32,9 +33,9 @@
 
             </div>
         </div>
-        <div class="greeting fourth-part" id="fourthPartDiv">
+        <div class="greeting fourth-part heart" id="fourthPartDiv">
             <canvas id="gravitypoint-sketch-holder">
-
+                <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             </canvas>
         </div>
         <div class="starry-sky">
@@ -51,7 +52,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/ScrollToPlugin.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 <!--<script src="js/main.js"></script>-->
-<!--<script src="js/main-demo.js"></script>-->
+<script src="js/main-demo.js"></script>
 <script src="js/gravitypoints.js"></script>
 
 </html>
