added new fonts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!--<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Satisfy" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caveat|Great+Vibes" rel="stylesheet">
     <link type="text/css" href="css/bulma.min.css" rel="stylesheet">
     <!--<link type="text/css" href="css/main.css" rel="stylesheet">-->
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
@@ -33,10 +34,12 @@
 
             </div>
         </div>
+        <div class="bg-color-fourthpart">
         <div class="greeting fourth-part heart" id="fourthPartDiv">
             <canvas id="gravitypoint-sketch-holder">
                 <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
             </canvas>
+        </div>
         </div>
         <div class="starry-sky">
             <div id="sketch-holder">
