added stickers for timeline 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </div>
         <div class="greeting second-part" id="secondPartDiv">
             <div id="secondpart-text-container">
-
+                <img class="secondPartImage" src="assets/sugarcub-pink-1.webp"/>
+                <img class="secondPartImage" src="assets/sugarcub-pink-2.png"/>
             </div>
         </div>
         <div class="greeting third-part" id="thirdPartDiv">
