fixing second part

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
         </div>
         <div class="greeting second-part" id="secondPartDiv">
             <div id="secondpart-text-container">
-                <img class="secondPartImage" src="assets/sugarcub-pink-1.webp"/>
-                <img class="secondPartImage" src="assets/sugarcub-pink-2.png"/>
+                <img class="secondPartImage_1 sp_img" src="assets/sugarcub-pink-1.webp"/>
+                <img class="secondPartImage_2 sp_img" src="assets/sugarcub-pink-2.png"/>
+                <img class="secondPartImage_3 sp_img" src="assets/sugar-male-2.png"/>
+                <img class="secondPartImage_4 sp_img" src="assets/sugar-male-3.png"/>
+                <img class="secondPartImage_5 sp_img" src="assets/sugar-couple-4.png"/>
             </div>
         </div>
         <div class="greeting third-part" id="thirdPartDiv">
