finished part two

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
         </div>
         <div class="greeting second-part" id="secondPartDiv">
             <div id="secondpart-text-container">
-                <img class="secondPartImage_1 sp_img" src="assets/sugarcub-pink-1.webp"/>
-                <img class="secondPartImage_2 sp_img" src="assets/sugarcub-pink-2.png"/>
-                <img class="secondPartImage_3 sp_img" src="assets/sugar-male-2.png"/>
-                <img class="secondPartImage_4 sp_img" src="assets/sugar-male-3.png"/>
-                <img class="secondPartImage_5 sp_img" src="assets/sugar-couple-4.png"/>
+                <div class='sp_img_1 sp_img_container'>
+                    <img class="secondPartImage_1" src="assets/sugarcub-pink-1.webp"/>
+                </div>
+                <div class='sp_img_2 sp_img_container'>
+                    <img class="secondPartImage_2" src="assets/sugar-male-2.png"/>
+                </div>
+                <div class='sp_img_3 sp_img_container'>
+                        <img class="secondPartImage_3" src="assets/sugarcub-pink-2.png"/>
+                </div>
+                <div class='sp_img_4 sp_img_container'>
+                        <img class="secondPartImage_4" src="assets/sugarcub-pink-2.png"/>
+                </div>
             </div>
         </div>
         <div class="greeting third-part" id="thirdPartDiv">
