finished image slideshow part

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                         <img class="secondPartImage_3" src="assets/sugarcub-pink-2.png"/>
                 </div>
                 <div class='sp_img_4 sp_img_container'>
-                        <img class="secondPartImage_4" src="assets/sugarcub-pink-2.png"/>
+                        <img class="secondPartImage_4" src="assets/sugar-couple-4.png"/>
                 </div>
             </div>
         </div>
         <div class="greeting third-part" id="thirdPartDiv">
             <div id="thirdpart-text-container">
-
+                
             </div>
         </div>
         <div class="bg-color-fourthpart">
