--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
             </div>
         </div>
         <div class="bg-color-fourthpart">
-        <div class="greeting fourth-part heart" id="fourthPartDiv">
-            <canvas id="gravitypoint-sketch-holder">
-                <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-            </canvas>
-        </div>
+            <div id="fourthpart-text-container">
+        
+            </div>
+            <div class="greeting fourth-part heart" id="fourthPartDiv">
+                <canvas id="gravitypoint-sketch-holder">
+                    <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+                </canvas>
+            </div>
         </div>
         <div class="starry-sky">
             <div id="sketch-holder">
