--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Satisfy" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caveat|Great+Vibes" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy" rel="stylesheet">
     <link type="text/css" href="css/bulma.min.css" rel="stylesheet">
     <!--<link type="text/css" href="css/main.css" rel="stylesheet">-->
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
