fixing song bug . preloading all before playing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     
     <div class="main-container">
-       <div class="space-div">
+    <audio style="opacity: 0; z-index:-100; position: fixed" id="player"></audio>
+        <div class="space-div">
            <!--<i class="fas fa-angle-down scrolldown-i"></i>-->
            <a class="ca3-scroll-down-link ca3-scroll-down-arrow" data-ca3_iconfont="ETmodules" data-ca3_icon="" id="scrollIndicator"></a>
        </div>
