testing audio fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link type="text/css" href="css/main-demo.css" rel="stylesheet">
 </head>
 <body>
-    
+    <audio id="player"></audio>
     <div class="main-container">
     <audio style="opacity: 0; z-index:-100; position: fixed" id="player"></audio>
         <div class="space-div">
