fixing some bugs. css compatiblity updated

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat|Great+Vibes" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lakki+Reddy" rel="stylesheet">
     <link type="text/css" href="css/bulma.min.css" rel="stylesheet">
-    <!--<link type="text/css" href="css/main.css" rel="stylesheet">-->
-    <link type="text/css" href="css/main-demo.css" rel="stylesheet">
+    <link type="text/css" href="css/main.css" rel="stylesheet">
+    <!-- <link type="text/css" href="css/main-demo.css" rel="stylesheet"> -->
 </head>
 <body>
     <video id="music" autoplay="true" name="media" class='faded' loop><source src="https://rozelle18.github.io/greeting-project/assets/music/owl-city-meteor.mp3" type="audio/mp3"></video>
